# awesome-resumes

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  sitemap.xml
definitions/: index.html
docs/: definitions.md  index.md  samples.md
docs/guidelines/: after_sending_resume.md  ats.md  common_mistakes.md  shotgun_vs_target.md  structure.md  templates.md
docs/sections/: awards.md  certifications.md  education.md  languages.md  memberships.md  personal_information.md  projects.md  publications.md  references.md  skills.md  summary.md  volunteer_experience.md  work_experience.md
getting-started/: index.html
guidelines/after_sending_resume/: index.html
guidelines/ats/: index.html
guidelines/common_mistakes/: index.html
guidelines/shotgun_vs_target/: index.html
guidelines/structure/: index.html
guidelines/templates/: index.html
samples/: index.html
samples/full-stack/: README.md
search/: search_index.json
sections/awards/: index.html
sections/certifications/: index.html
sections/education/: index.html
sections/languages/: index.html
sections/memberships/: index.html
sections/personal_information/: index.html
sections/projects/: index.html
sections/publications/: index.html
sections/references/: index.html
sections/skills/: index.html
sections/summary/: index.html
sections/volunteer_experience/: index.html
sections/work_experience/: index.html
src/awesome_resume/: __init__.py
