[project]
name = "awesome-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.33",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocstrings[python]>=0.25.2",
    "ruff>=0.6.2",
    "mkdocs-material-extensions>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
